fixed bug with credits not showing

--- a/app/main/styles/Main.css
+++ b/app/main/styles/Main.css
@@ -44,6 +44,7 @@
     align-items: center;
     color: white;
     text-align: center;
+    margin-top: 10vh;
 }
 
 .dropdown-menu {
